# UniversalRemapper

./: ActionsByCategories.xml  CMakeLists.txt  README.md  vcpkg.json
CommonMod/: CMakeLists.txt
Data/: ActionsByCategories.xml
UniversalRemapper/: CMakeLists.txt  IUniversalRemapper.h  ModMain.cpp  ModMain.h  RemapperKeyEventListener.cpp  RemapperKeyEventListener.h
